--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=reactive-spring-boot
+
+# R2DBC Configuration
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
+spring.r2dbc.username=postgres
+spring.r2dbc.password=postgres
+spring.r2dbc.name=reactive-db-pool
+
+# R2DBC Connection Pool
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.max-size=20
+spring.r2dbc.pool.max-idle-time=30m
+spring.r2dbc.pool.validation-query=SELECT 1
+
+# Flyway Configuration (required since Flyway is on the classpath)
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.schemas=reactive_db
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+
+# Security Configuration
+spring.security.user.name=user
+spring.security.user.password=password
+
+# Disable Actuator Security Auto-configuration (Servlet)
+management.server.port=8081
